# MTUSpline

./: CMakeLists.txt  LICENSE  MyoHand_GripForce.ipynb  README.md
FileIO/: CMakeLists.txt  DataFromAngleFile.cpp  DataFromAngleFile.h  DataFromFile.cpp  HeaderFile.cpp  HeaderFile.h  TranslateOpenSimCEINMS.cpp  TranslateOpenSimCEINMS.h
MTUSpline/: CMakeLists.txt  MTUSpline.cpp  MTUSpline.h  MTUSplineBase.cpp  MTUSplineBase.h  MTUSplineData.cpp  MTUSplineData.h  MTUSplineDataRead.cpp  MTUSplineDataRead.h  MTUSplineDataWrite.cpp  MTUSplineDataWrite.h  MTUSplineInterface.cpp  MTUSplineInterface.h  MTUSplineInterfaceSwig.i  MuscleAnalyseForSpline.cpp  MuscleAnalyseForSpline.h  SplineBasisFunction.cpp  SplineBasisFunction.h  splineCoeffComputation.cpp
Test/: BsplineTest.cpp  CMakeLists.txt
XSD/: NMSmodel.cxx  NMSmodel.hxx
cfg/TestData/: 3DGaitModel2392-scaled_MuscleAnalysis_ActiveFiberForce.sto  3DGaitModel2392-scaled_MuscleAnalysis_ActiveFiberForceAlongTendon.sto  3DGaitModel2392-scaled_MuscleAnalysis_FiberActivePower.sto  3DGaitModel2392-scaled_MuscleAnalysis_FiberForce.sto  3DGaitModel2392-scaled_MuscleAnalysis_FiberLength.sto  3DGaitModel2392-scaled_MuscleAnalysis_FiberPassivePower.sto  3DGaitModel2392-scaled_MuscleAnalysis_FiberVelocity.sto  3DGaitModel2392-scaled_MuscleAnalysis_Length.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_ankle_angle_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_ankle_angle_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_adduction_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_adduction_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_flexion_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_flexion_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_rotation_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_hip_rotation_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_knee_angle_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_knee_angle_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_lumbar_bending.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_lumbar_extension.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_lumbar_rotation.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_mtp_angle_l.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_mtp_angle_r.sto  3DGaitModel2392-scaled_MuscleAnalysis_MomentArm_pelvis_list.sto  (+41 more)
cfg/TestData/Data2/: angles_0.sto  lmt_0.mot  (+4 more)
xmlInput/: CMakeLists.txt  ExecutionXmlReader.cpp  ExecutionXmlReader.h  NMSmodel-pskel.cxx  NMSmodel-pskel.hxx  NMSmodel.xsd  NMSmodelConfig.h  execution.cxx  execution.hxx  execution.xsd
